--- a/CHIP_Pro_DKit-Docs/source/stylesheets/screen.css.scss
+++ b/CHIP_Pro_DKit-Docs/source/stylesheets/screen.css.scss
@@ -369,7 +369,7 @@ html, body {
     margin-bottom: $h1-margin-bottom;
     margin-top: 2em;
     border-top: 1px solid #ddd;
-    background-image: linear-gradient(to bottom, #fff, #f9f9f9);
+    //background-image: linear-gradient(to bottom, #fff, #f9f9f9);
 
   }
 
