--- a/DIP-docs/source/stylesheets/screen.css.scss
+++ b/DIP-docs/source/stylesheets/screen.css.scss
@@ -366,7 +366,7 @@ html, body {
     margin-bottom: $h1-margin-bottom;
     margin-top: 2em;
     border-top: 1px solid #ddd;
-    background-image: linear-gradient(to bottom, #fff, #f9f9f9);
+   //background-image: linear-gradient(to bottom, #fff, #f9f9f9);
   }
 
   h1:first-child, div:first-child + h1 {
