build and quickstart edits

--- a/Gadget-docs/source/stylesheets/screen.css.scss
+++ b/Gadget-docs/source/stylesheets/screen.css.scss
@@ -533,7 +533,7 @@ html, body {
     background-color: $code-bg;
     color: #fff;
 
-    padding: 2em $main-padding;
+    padding: 1em 8px;
     margin: 0;
     width: $examples-width;
 
