--- a/landingpage/src/main.scss
+++ b/landingpage/src/main.scss
@@ -81,7 +81,7 @@ header {
       font-weight: 400;
       color: $pink;
     }
-    
+
     & p {
       margin: 0;
       padding: 0;
@@ -142,7 +142,7 @@ section.docs {
       background-repeat: no-repeat;
       background-position: center bottom;
       &.chip {
-        background-image: url('chipDoc.png');        
+        background-image: url('chipDoc.png');
       }
       &.pc {
         background-image: url('pocketChipDoc.png');
@@ -155,6 +155,9 @@ section.docs {
       }
       &.chip_pro_devkit {
         background-image: url('chipProDevKitDoc.png');
+      }
+      &.gadget {
+        background-image: url('gadgetDoc.png');
       }
       &:hover {
         cursor: pointer;
